--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>SIW cargo</title>
-  <base href="/">
+   <base href="/">
+  <!-- <base href="https://planidear.com.ar/prueba-FullStack/"> -->
   <!-- ng build --base-href="https://planidear.com.ar/prueba-FullStack/" -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- <link rel="icon" type="image/x-icon" href="https://planidear.com.ar/prueba-FullStack/favicon.ico"> -->
+ <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!--<link rel="icon" type="image/x-icon" href="https://planidear.com.ar/prueba-FullStack/favicon.ico">-->
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
