--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>SIW cargo</title>
+  <title>Prueba</title>
    <base href="/">
   <!-- <base href="https://planidear.com.ar/prueba-FullStack/"> -->
   <!-- ng build --base-href="https://planidear.com.ar/prueba-FullStack/" -->
